Add Filament Complite

--- a/Filament-Manager/App.config
+++ b/Filament-Manager/App.config
@@ -1,6 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Filament_Manager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Filament_Manager.Properties.Settings>
+            <setting name="barcodeTyp" serializeAs="String">
+                <value>18</value>
+            </setting>
+            <setting name="barcodeWidth" serializeAs="String">
+                <value>300</value>
+            </setting>
+            <setting name="barcodeHeight" serializeAs="String">
+                <value>150</value>
+            </setting>
+            <setting name="checkLabel" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="lablLocation" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="btnForColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="btnBackColor" serializeAs="String">
+                <value>White</value>
+            </setting>
+            <setting name="labelpos" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </Filament_Manager.Properties.Settings>
+    </userSettings>
 </configuration>
