add new Default Setting Variable

--- a/Filament-Manager/Properties/Settings.settings
+++ b/Filament-Manager/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="labelpos" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="PrinterIP" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="PrinterApiKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
