--- a/Filament-Manager/App.config
+++ b/Filament-Manager/App.config
@@ -34,6 +34,12 @@
             <setting name="labelpos" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="PrinterIP" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PrinterApiKey" serializeAs="String">
+                <value />
+            </setting>
         </Filament_Manager.Properties.Settings>
     </userSettings>
 </configuration>
