new SQL with Mysql

--- a/Filament-Manager/App.config
+++ b/Filament-Manager/App.config
@@ -40,6 +40,18 @@
             <setting name="PrinterApiKey" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DBAdress" serializeAs="String">
+                <value>127.0.0.1</value>
+            </setting>
+            <setting name="DB" serializeAs="String">
+                <value>root</value>
+            </setting>
+            <setting name="User" serializeAs="String">
+                <value>root</value>
+            </setting>
+            <setting name="password" serializeAs="String">
+                <value>root</value>
+            </setting>
         </Filament_Manager.Properties.Settings>
     </userSettings>
 </configuration>
