-Add Color change and save after close -add MySqlBackup function(coming soon)

--- a/Filament-Manager/App.config
+++ b/Filament-Manager/App.config
@@ -52,6 +52,9 @@
             <setting name="password" serializeAs="String">
                 <value>root</value>
             </setting>
+            <setting name="styleColor" serializeAs="String">
+                <value>Default</value>
+            </setting>
         </Filament_Manager.Properties.Settings>
     </userSettings>
 <system.data>
