--- a/Filament-Manager/App.config
+++ b/Filament-Manager/App.config
@@ -55,6 +55,9 @@
             <setting name="styleColor" serializeAs="String">
                 <value>Default</value>
             </setting>
+            <setting name="FullScreen" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Filament_Manager.Properties.Settings>
     </userSettings>
 <system.data>
