--- a/Filament-Manager/Properties/Settings.settings
+++ b/Filament-Manager/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="styleColor" Type="MetroFramework.MetroColorStyle" Scope="User">
       <Value Profile="(Default)">Default</Value>
     </Setting>
+    <Setting Name="FullScreen" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
