add Octoprint API function

--- a/Filament-Manager/App.config
+++ b/Filament-Manager/App.config
@@ -64,6 +64,12 @@
             <setting name="FullScreen" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="IpPrinter" serializeAs="String">
+                <value>192.168.1.182</value>
+            </setting>
+            <setting name="ApiKey" serializeAs="String">
+                <value>A6C6603BB2F743D6B084D7F52E568011</value>
+            </setting>
         </Filament_Manager.Properties.Settings>
     </userSettings>
 </configuration>
