add Octorpint Control Function

--- a/Filament-Manager/Filament-Manager.csproj
+++ b/Filament-Manager/Filament-Manager.csproj
@@ -125,6 +125,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\jog.cs" />
+    <Compile Include="Class\TargetTemp.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
